--- a/app/globals.css
+++ b/app/globals.css
@@ -34,10 +34,9 @@
   --sidebar-accent-foreground: oklch(0.252 0 0);
   --sidebar-border: oklch(0.9401 0 0);
   --sidebar-ring: oklch(0.5486 0 0);
-  --font-sans: "Cereal_Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  --font-serif: Georgia, Cambria, "Times New Roman", Times, serif;
-  --font-mono: "JetBrains Mono", Menlo, Monaco, Consolas, "Liberation Mono",
-    "Courier New", monospace;
+  --font-sans: var(--font-montserrat), sans-serif;
+  --font-serif: var(--font-montserrat), serif;
+  --font-mono: var(--font-montserrat), monospace;
   --radius: 0.75rem;
   --shadow-x: 0rem;
   --shadow-y: 0.125rem;
@@ -95,10 +94,9 @@
   --sidebar-accent-foreground: oklch(0.8975 0 0);
   --sidebar-border: oklch(0.3485 0 0);
   --sidebar-ring: oklch(0.738 0 0);
-  --font-sans: "Cereal_Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  --font-serif: Georgia, Cambria, "Times New Roman", Times, serif;
-  --font-mono: "JetBrains Mono", Menlo, Monaco, Consolas, "Liberation Mono",
-    "Courier New", monospace;
+  --font-sans: var(--font-montserrat), sans-serif;
+  --font-serif: var(--font-montserrat), serif;
+  --font-mono: var(--font-montserrat), monospace;
   --radius: 0.75rem;
   --shadow-x: 0rem;
   --shadow-y: 0.125rem;
@@ -183,4 +181,5 @@
 
 body {
   letter-spacing: var(--tracking-normal);
+  font-family: var(--font-montserrat), sans-serif;
 }
